crates/cli/tests/snapshots/lib__check@unknown_function.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_function.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_function.nemo
---
success: false
exit_code: 1
----- stdout -----
[05] Error: Unknown variable unknown
   ╭─[ tests/check/unknown_function.nemo:2:3 ]
   │
 2 │   unknown()
   │   ───┬───  
   │      ╰───── Unknown variable unknown
───╯


----- stderr -----
Error: "Check failed with 1 errors"
